# plex-watched-sync

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
plex_watched_sync/: __init__.py  cli.py  log.py  sync.py
